# KhemaCoin

./: .gitignore  CMakeLists.txt
Inc/: Block.hpp  Chain.hpp  Transaction.hpp
Src/: Block.cpp  Chain.cpp  Transaction.cpp  main.cpp
Src/hash/: Hasher.cpp  Sha.cpp
Src/hash/Inc/: Hasher.hpp  Sha.hpp
